--- a/public/style/style.css
+++ b/public/style/style.css
@@ -38,13 +38,15 @@ a:visited {
     text-decoration: none; color:white;
 }
 
-a:link { text-decoration: none; }
+a:link { text-decoration: none;  color:white;
+}
 
 
 a:hover { text-decoration: none; color: red;}
 
 
-a:active { text-decoration: none; }
+a:active { text-decoration: none; color:white;
+}
 
 nav ul li {
     padding: 0px 20px;
